--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@medv/finder",
+  "name": "@ahamoment/finderx",
   "type": "module",
-  "version": "2.1.0",
-  "description": "CSS Selector Generator",
-  "repository": "antonmedv/finder",
-  "homepage": "https://github.com/antonmedv/finder",
-  "author": "Anton Medvedev <anton@medv.io>",
+  "version": "0.0.1",
+  "description": "precise query node by css selector ",
+  "repository": "liuzhaodong/finderx",
+  "homepage": "https://github.com/liuzhaodong/finderx",
+  "author": "liuzhaodong <liuzhaodong@gmail.com>",
   "license": "MIT",
   "keywords": [
     "css",
     "selector",
     "generator"
   ],
-  "main": "finder.js",
-  "types": "finder.d.ts",
+  "main": "finderx.js",
+  "types": "finderx.d.ts",
   "files": [
     "*.ts",
     "*.js"
@@ -23,7 +23,7 @@
     "test": "tsc && ava",
     "prepare": "tsc",
     "release": "release-it --access public",
-    "size": "minify finder.js --sourceType module | gzip-size"
+    "size": "minify finderx.js --sourceType module | gzip-size"
   },
   "devDependencies": {
     "ava": "^3.15.0",
