--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "browser-env": "^3.3.0",
     "esm": "^3.2.25",
     "gzip-size-cli": "*",
+    "keyv": "^4.5.0",
     "release-it": "^13.6.1",
     "ts-node": "^10.2.1",
     "typescript": "3.9.3"
