--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "finderx",
   "type": "module",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "precise query node by css selector ",
   "repository": "liuzhaodong/finderx",
   "homepage": "https://github.com/liuzhaodong/finderx",
@@ -29,6 +29,7 @@
     "ava": "^3.15.0",
     "babel-minify": "*",
     "browser-env": "^3.3.0",
+    "css.escape": "^1.5.1",
     "esm": "^3.2.25",
     "gzip-size-cli": "*",
     "keyv": "^4.5.0",
@@ -50,5 +51,8 @@
     "nodeArguments": [
       "--loader=ts-node/esm"
     ]
+  },
+  "dependencies": {
+    "@medv/finder": "^3.1.0"
   }
 }
